jellyfin/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: linuxserver/jellyfin:arm64v8-version-12.0ubu2604
        name: jellyfin
        volumeMounts:
          - mountPath: /config
            name: jellyconfigpv
          - mountPath: /data
            name: jellydatapv
          - mountPath: /data2
            name: jellydata2pv
#      imagePullPolicy: IfNotPresent
      restartPolicy: Always
      volumes:
      - name: jellyconfigpv
        persistentVolumeClaim:
          claimName: jellyconfigpvc
      - name: jellydatapv
        persistentVolumeClaim:
          claimName: jellydatapvc
      - name: jellydata2pv
        persistentVolumeClaim:
          claimName: jellydata2pvc
