jellyfin/jellyfinsvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jellyfin
  name: jellyfinudp
  namespace: jellyfin
spec:
  ports:
  - port: 7359
    protocol: UDP
    targetPort: 7359
  selector:
    app: jellyfin
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jellyfin
  name: jellyfintcp
  namespace: jellyfin
spec:
  ports:
  - port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
